Added details about the 5.22 release

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </ul>
 
   <p><h3>Latest stable binary: <br>
-  <a href="https://oss.sonatype.org/content/groups/staging/org/threadly/threadly/5.21/threadly-5.21.jar">threadly-5.21.jar</a></h3></p>
+  <a href="https://oss.sonatype.org/content/groups/staging/org/threadly/threadly/5.22/threadly-5.22.jar">threadly-5.22.jar</a></h3></p>
 
         <p><img src="https://badge.buildkite.com/7f78724dd03f9e47cc655d0b645ed39f7d0558e4f1b4bd7e91.svg"></p>
       </header>
@@ -49,6 +49,7 @@
   <p>To get a more complete overview of our features take a look at our <a href="https://github.com/threadly/threadly/wiki/Threadly-Features">features wiki page</a>.</p>
   
   <p><h3>News:</h3>
+  <p>* May 21st - 5.22 was released as a follow up to the bug fix in 5.21.  Not a recent regression, just another case of the defect that was missed.</p>
   <p>* May 20th - 5.21 was released, focused around another bug fix around canceling collections of Futures produced by FutureUtils.  We also now are using <a href="http://buildkite.com">buildkite</a> to perform our CI solution.  Having talked with them I am pretty confident this will be a better fit for our needs.</p>
   <p>* May 18th - 5.20 was released which includes important bug fixes for communicating the "canceled" state after a map / flatMap operation on a future.  It also includes internal performance improvements and minor features expansions (which can be read about in the changelog).</p>
   <p>* May 15th - Following closely behind 5.18, 5.19 provides internal improvements as well as minor features that can be read about in the changelog.</p>
