--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </ul>
 
   <p><h3>Latest stable binary: <br>
-  <a href="https://oss.sonatype.org/content/groups/staging/org/threadly/threadly/5.26/threadly-5.26.jar">threadly-5.26.jar</a></h3></p>
+  <a href="https://oss.sonatype.org/content/groups/staging/org/threadly/threadly/5.27/threadly-5.27.jar">threadly-5.27.jar</a></h3></p>
 
         <p><img src="https://badge.buildkite.com/7f78724dd03f9e47cc655d0b645ed39f7d0558e4f1b4bd7e91.svg"></p>
       </header>
@@ -49,6 +49,7 @@
   <p>To get a more complete overview of our features take a look at our <a href="https://github.com/threadly/threadly/wiki/Threadly-Features">features wiki page</a>.</p>
   
   <p><h3>News:</h3>
+  <p>* July 3rd - 5.27 was released which includes minor changes to further the improvement introduced in 5.26.</p>
   <p>* July 1st - 5.26 was released, providing minor internal performance improvements to PriorityScheduler, and heap improvements when adapting DoNothingRunnable's into Callable's.</p>
   <p>* June 19th - 5.25 was released.  This contains a number of internal improvements and external improvements.  Read about them in the <a href="https://github.com/threadly/threadly/releases/tag/release-5.25">release details</a>.</p>
   <p>* May 25th - 5.23 was released.  Threadly has been getting a lot of attention lately.  This release does include a small bug fix for the Profiler when used with the `SameThreadSubmitterExecutor`.  However this release is focused mostly around improvements, performance improvements with futures and other minor improvements.</p>
