Updated homepage for 5.42 release

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </ul>
 
   <p><h3>Latest stable binary: <br>
-  <a href="https://oss.sonatype.org/content/groups/staging/org/threadly/threadly/5.41/threadly-5.41.jar">threadly-5.41.jar</a></h3></p>
+  <a href="https://oss.sonatype.org/content/groups/staging/org/threadly/threadly/5.42/threadly-5.42.jar">threadly-5.42.jar</a></h3></p>
 
         <p><img src="https://badge.buildkite.com/7f78724dd03f9e47cc655d0b645ed39f7d0558e4f1b4bd7e91.svg"></p>
       </header>
@@ -49,7 +49,8 @@
   <p>To get a more complete overview of our features take a look at our <a href="https://github.com/threadly/threadly/wiki/Threadly-Features">features wiki page</a>.</p>
   
   <p><h3>News:</h3>
-  <p>* October 24 - Another 5.X release, focused primarily on performance improvements and other internal updates.  The <a href="https://github.com/threadly/threadly/releases/tag/release-5.41">release details</a> outlines the specific areas of improvement.</p>
+  <p>* December 9th - 5.42 was released, providing performance improvements to RateLimiterExecutor and ExecutorLimiter.  The gains in RateLimiterExecutor being most significant, providing huge improvements in cases where thread contention exists.</p> 
+  <p>* October 24th - Another 5.X release, focused primarily on performance improvements and other internal updates.  The <a href="https://github.com/threadly/threadly/releases/tag/release-5.41">release details</a> outlines the specific areas of improvement.</p>
   <p>* September 4th - As we start to think more about a 6.0 release, backwards compatible API changes have been provided in the new <a href="https://github.com/threadly/threadly/releases/tag/release-5.40">5.40 release</a>.  In this we moved and renamed Watchdog into the new watchdog package.  As part of this we also added a new "PollingWatchdog" to be able to provide more flexible timeout mechanics when desired.</p>
   <p>* August 25th - <a href="https://github.com/threadly/threadly/releases/tag/release-5.39">5.39</a> released, adding ConfigureableThreadFactory.builder() as an easier way to configure the ThreadFactory.  Also included are some minor internal improvements to ListenableFuture.map operations.  We are starting to formalize a 6.0 release, take a look at the <a href="https://github.com/threadly/threadly/milestone/53">6.0 Release Milestone</a>.  If you have any ideas of what would be good to include in a upcoming 6.0, or even a future 7.0 release, feel free to open an <a href="https://github.com/threadly/threadly/issues">issue</a>.</p>
   <p>* June 25th - 5.38 released with some minor feature expansions to FutureUtils and the new ArrayIterator.  Read about them in the <a href="https://github.com/threadly/threadly/releases/tag/release-5.38">release details</a>.</p>
