Fix download link and update badge icon

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   </ul>
 
   <p><h3>Latest stable binary: <br>
-  <a href="https://oss.sonatype.org/content/groups/staging/org/threadly/threadly/5.43/threadly-5.43.jar">threadly-5.43.jar</a></h3></p>
+  <a href="https://github.com/threadly/threadly/releases/download/release-5.43/threadly-5.43.jar">threadly-5.43.jar</a></h3></p>
 
-        <p><img src="https://badge.buildkite.com/7f78724dd03f9e47cc655d0b645ed39f7d0558e4f1b4bd7e91.svg"></p>
+        <p><img src="https://badge.buildkite.com/a6b3c844ce059f96c577ec485ab9fb36925790deec8e26dcd9.svg"></p>
       </header>
       <section>
         <p>A library of java tools to assist with development of concurrent java applications.  This is designed to be a complement to java.util.concurrent to provide functionality more tools for making safe concurrent implementations.</p>
